[package]
name = "cccp"
version = "0.1.0"
authors = ["Symphorien Gibol <symphorien+git@xlumurb.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crc64fast = "1"
digest = "0.9"
typenum = "1"
generic-array = "0.14"
structopt = "0.3"
# the addition of prctl requires rustc 1.43
nc = "0.4,<0.4.11"
libc="0.2"
walkdir="2"
nix = "0.18"
tempfile = "3"
clap = "2"
indicatif = "0.15"

[dev-dependencies]
cli_test_dir = "0.1"

[profile.release]
debug = true
